; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_print.c_put_refcnt.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_print.c_put_refcnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtoa_context = type { i32 }

@JVP_DTOA_FMT_MAX_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dtoa_context*, i32, i32*, i32*, i32)* @put_refcnt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_refcnt(%struct.dtoa_context* %0, i32 %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.dtoa_context*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store %struct.dtoa_context* %0, %struct.dtoa_context** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* @JVP_DTOA_FMT_MAX_LEN, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %11, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %12, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @put_char(i8 signext 32, i32* %17, i32* %18, i32 %19)
  %21 = load i32*, i32** %8, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @put_char(i8 signext 40, i32* %21, i32* %22, i32 %23)
  %25 = load %struct.dtoa_context*, %struct.dtoa_context** %6, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @jvp_dtoa_fmt(%struct.dtoa_context* %25, i8* %16, i32 %26)
  %28 = load i32*, i32** %8, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @put_str(i32 %27, i32* %28, i32* %29, i32 %30)
  %32 = load i32*, i32** %8, align 8
  %33 = load i32*, i32** %9, align 8
  %34 = load i32, i32* %10, align 4
  %35 = call i32 @put_char(i8 signext 41, i32* %32, i32* %33, i32 %34)
  %36 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %36)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @put_char(i8 signext, i32*, i32*, i32) #2

declare dso_local i32 @put_str(i32, i32*, i32*, i32) #2

declare dso_local i32 @jvp_dtoa_fmt(%struct.dtoa_context*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
